--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "bunx rork start -p fk5xtgrzfc6pibtnqill4 --tunnel",
-    "start-web": "bunx rork start -p fk5xtgrzfc6pibtnqill4 --web --tunnel",
-    "start-web-dev": "DEBUG=expo* bunx rork start -p fk5xtgrzfc6pibtnqill4 --web --tunnel"
+    "start": "npx rork start -p fk5xtgrzfc6pibtnqill4 --tunnel",
+    "start-web": "npx rork start -p fk5xtgrzfc6pibtnqill4 --web --tunnel",
+    "start-web-dev": "DEBUG=expo* npx rork start -p fk5xtgrzfc6pibtnqill4 --web --tunnel"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -21,28 +21,28 @@
     "expo-constants": "~17.1.4",
     "expo-font": "~13.3.0",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.1.6",
+    "expo-image": "~2.3.2",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.4",
     "expo-location": "~18.1.6",
-    "expo-router": "~5.0.3",
+    "expo-router": "~5.1.2",
     "expo-splash-screen": "~0.30.7",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.6",
-    "expo-web-browser": "~14.1.6",
+    "expo-web-browser": "~14.2.0",
     "hono": "^4.8.3",
     "lucide-react-native": "^0.475.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.1",
+    "react-native": "^0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.3.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-web": "^0.20.0",
     "superjson": "^2.2.2",
@@ -51,8 +51,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/plugin-transform-modules-commonjs": "^7.27.1",
+    "@babel/plugin-transform-runtime": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "@expo/cli": "^0.24.17",
     "@expo/ngrok": "^4.1.0",
+    "@expo/webpack-config": "^19.0.1",
     "@types/react": "~19.0.10",
+    "buffer": "^6.0.3",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "typescript": "~5.8.3"
   },
   "private": true
