--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hono/trpc-server": "^0.4.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^7.1.6",
+    "@supabase/supabase-js": "^2.50.3",
     "@tanstack/react-query": "^5.81.5",
     "@trpc/client": "^11.4.3",
     "@trpc/react-query": "^11.4.3",
