--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "hono": "^4.8.3",
     "lucide-react-native": "^0.475.0",
     "nativewind": "^4.1.23",
+    "prop-types": "^15.8.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "^0.79.5",
@@ -47,6 +48,8 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-swipe-row": "^1.0.3",
     "react-native-web": "^0.20.0",
     "superjson": "^2.2.2",
     "zod": "^3.25.71",
