--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@trpc/client": "^11.4.3",
     "@trpc/react-query": "^11.4.3",
     "@trpc/server": "^11.4.3",
+    "date-fns": "^4.1.0",
     "expo": "^53.0.4",
     "expo-blur": "~14.1.4",
     "expo-clipboard": "^7.1.5",
     "expo-constants": "~17.1.4",
+    "expo-device": "^7.1.4",
     "expo-font": "~13.3.0",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.2",
@@ -29,6 +31,7 @@
     "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.4",
     "expo-location": "~18.1.6",
+    "expo-notifications": "^0.31.4",
     "expo-router": "~5.1.2",
     "expo-splash-screen": "~0.30.7",
     "expo-status-bar": "~2.2.3",
